--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <div id = "thumbnails">
+  <div id = "thumbnails" class="thumbnails">
   </div>
   <div id = "lightbox">
     <div class = "close"/> </div>
