--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   <div id = "thumbnails" class="thumbnails">
   </div>
   <div id = "lightbox">
-    <div class = "close"/> </div>
-    <div class = "arrow left" /> </div>
-    <div class = "arrow right"/>  </div>
+    <div class = "close"> </div>
+    <div class = "arrow left"> </div>
+    <div class = "arrow right">  </div>
   </div>
   <div id = "overlay">
   </div>
 
 <script src="js/app.js"></script>
 <script src="js/utility.js"></script>
-<script src="js/model.js"></script>
 <script src="js/view.js"></script>
 <script src="js/main.js"></script>
 </body>
